Actualizadas las traducciones

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -882,12 +882,12 @@
     "lines": "Linien",
     "linux": "Linux",
     "list": "Liste",
-    "load-def-acc-plan": "load-def-acc-plan",
+    "load-def-acc-plan": "Laden Sie den Standardkontenplan",
     "loading-controller": "Controller laden: '0'",
     "location": "Standort",
     "lock-accounting": "Buchhaltung sperren",
     "lock-entry": "Buchung sperren",
-    "lock-invoice": "R",
+    "lock-invoice": "Rechnung markiert",
     "lock-unlock": "sperren-entsperren",
     "lock-unlock-account-entry": "Buchung sperren\/entsperren",
     "locked": "Verschlossen",
@@ -959,9 +959,9 @@
     "missing-data-epigraph-group": "Fehlende Daten in der Gruppenepigraph.",
     "missing-data-subaccount": "Daten fehlen im Unterkonto.",
     "missing-epigraph-data": "Daten fehlen im Epigraph.",
-    "missing-file": "Missing file",
+    "missing-file": "Datei fehlt",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
-    "mobile": "mobile",
+    "mobile": "Mobil",
     "model": "Modelo",
     "model-not-found": "Modell nicht gefunden: %model%",
     "monday": "Montag",
@@ -1082,7 +1082,7 @@
     "original": "Original",
     "original-file": "Originaldatei",
     "other-data": "Andere Daten",
-    "others-filters": "Others filters",
+    "others-filters": "Sonstige Filter",
     "out-of-stock": "nicht vorrätig",
     "page": "Seite",
     "page-break": "Salto de página",
@@ -1171,7 +1171,7 @@
     "post-office-box": "Postfach",
     "postgresql": "PostgreSQL",
     "precio": "Prive",
-    "predefined-concepts": "Predefined Concepts",
+    "predefined-concepts": "Vordefinierte Konzepte",
     "preferences": "Vorlieben",
     "preview": "Vorschau",
     "previous": "vorherige",
@@ -1211,7 +1211,7 @@
     "province": "Provinz",
     "provinces": "provinces",
     "public": "Öffentlichkeit",
-    "public-key": "Clave pública",
+    "public-key": "Öffentlicher Schlüssel",
     "purchase-rate": "Kaufrate",
     "purchased-quantity": "Gekaufte Menge",
     "purchases": "Käufe",
@@ -1314,7 +1314,7 @@
     "run": "run",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "Der Umsatz",
-    "sales-invoice": "sales-invoice",
+    "sales-invoice": "Verkaufsrechnung",
     "sales-rate": "Verkaufsrate",
     "sales-subaccount-not-found": "sales-subaccount-not-found",
     "same-group": "Gleiche Gruppe",
@@ -1337,13 +1337,13 @@
     "selected-quantity": "approve-quantity",
     "selector-number": "Wähler",
     "send": "Senden",
-    "send-anonymous-data": "Enviar datos anónimos",
+    "send-anonymous-data": "Anonyme Daten senden",
     "send-audios": "A",
     "send-documents": "Enviar documentos",
     "send-images": "Bilder senden",
     "send-invoices": "Enviar facturas",
     "send-location": "Enviar ubicación",
-    "send-mail": "Send mail",
+    "send-mail": "E-Mail senden",
     "send-mail-error": "Fehler beim Senden der E-Mail",
     "send-mail-ok": "E-Mail erfolgreich gesendet",
     "send-videos": "Videos senden",
@@ -1401,7 +1401,7 @@
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
-    "sorted-asc": "Ordenado ascendente",
+    "sorted-asc": "Aufsteigend sortiert",
     "sorted-desc": "Ordenado descendente",
     "source": "Quelle",
     "source-code": "Source code",
@@ -1501,7 +1501,7 @@
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Steuerverkehr",
     "taxes": "Steuern",
-    "telemetry-data-to-send": "telemetry-data-to-send",
+    "telemetry-data-to-send": "Die registrierten Installationen melden regelmäßig die Version von FacturaScripts, PHP, Land, Sprache und Plugin-Liste.",
     "telephone-prefix": "Telefonvorwahl",
     "template": "Vorlage",
     "template-error": "Vorlagenfehler",
@@ -1557,8 +1557,8 @@
     "tuesday": "Dienstag",
     "type": "Typ",
     "type-alert": "Type alert",
-    "type-critical": "Type critical",
-    "type-debug": "Type debug",
+    "type-critical": "Kritischer Typ",
+    "type-debug": "Debug-Typ",
     "type-emergency": "Type emergency",
     "type-error": "Type error",
     "type-info": "Informationstyp",
@@ -1608,7 +1608,7 @@
     "value-x": "Wert-x",
     "value-y": "Wert-y",
     "values": "Werte",
-    "variables": "Variables",
+    "variables": "Variablen",
     "variant": "Variante",
     "variants": "Variante",
     "vat": "IVA",
