--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -337,7 +337,7 @@
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "Scheduled Task",
-    "cron-timeout": "The cron has stopped to avoid exceeding the maximum PHP execution time. Please run the cron from the terminal to avoid this limit.",
+    "cron-timeout": "The cron has stopped to prevent exceeding the maximum PHP execution time. Please run the cron from the terminal to avoid this limit.",
     "crons": "Crons",
     "currency": "Currency",
     "currency-position": "Currency position",
@@ -1327,7 +1327,7 @@
     "search-document": "Type the number of %doctype% to search.",
     "search-product": "Search product",
     "second-hand": "Second hand",
-    "second-quarter": "2nd quarter",
+    "second-quarter": "2nd Quarter",
     "second-trimester": "Second trimester",
     "select": "Select",
     "select-all": "Select all",
@@ -1528,7 +1528,7 @@
     "time": "Time",
     "timezone": "Time zone",
     "title": "Title",
-    "title-font-size": "Title font size",
+    "title-font-size": "Title Font Size",
     "title-url": "Title URL",
     "to": "To",
     "to-refund": "To refund",
