--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -266,11 +266,11 @@
     "colors": "colori",
     "column": "Colonna",
     "columns": "Columns",
-    "combination-code": "Combination code",
+    "combination-code": "Codice di combinazione",
     "combinations": "combinazioni",
     "commercial-terms": "Termini commerciali",
     "commission": "commission",
-    "commission-general-info": "commission-general-info",
+    "commission-general-info": "Elenco delle percentuali di commissione applicabili alla vendita di prodotti. Verrà applicata la percentuale con le condizioni più restrittive o specifiche comunicate.",
     "commission-settlement": "commission-settlement",
     "commissions": "commissioni",
     "common-data": "Dati comuni",
@@ -307,9 +307,9 @@
     "controller": "controllore",
     "controller-error": "Errore del controller",
     "controller-not-found": "Controllore non trovato",
-    "conversion-rate": "Conversion rate",
+    "conversion-rate": "Tasso di cambio a €",
     "conversion-rate-not-0": "Il tasso di conversione non può essere 0.",
-    "convert-into-customer": "convert-into-customer",
+    "convert-into-customer": "Convertire in cliente",
     "convert-into-supplier": "convert-to-supplier",
     "cookies": "Cookies",
     "copy": "copia",
@@ -446,7 +446,7 @@
     "description-4": "Descrizione 4",
     "description-4ba": "Descrizione 4ba",
     "description2": "Descrizione 2",
-    "description3": "description3",
+    "description3": "Descrizione 3",
     "design": "Design",
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
@@ -547,7 +547,7 @@
     "error-to-innodb": "Impossibile convertire la tabella di InnoDB.",
     "error-updating-product-stock": "Errore durante l'aggiornamento dello stock prodotti!",
     "errors": "errori",
-    "es_EC": "Spagnolo (Equador)",
+    "es_EC": "Spagnolo (Ecuador)",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
     "es-tax-exception-e2": "Spagna: eccezione per l'articolo 21 della legge sull'IVA",
     "es-tax-exception-e3": "Spagna: eccezione per l'articolo 22 della legge sull'IVA",
@@ -636,7 +636,7 @@
     "folder-not-writable": "Non è possibile scrivere sui FacturaScripts cartella.",
     "font": "Font",
     "font-size": "Dimensione del font",
-    "footer": "Pié de página",
+    "footer": "Piè di pagina",
     "footer-text": "testo-di-chiusura",
     "for-admins": "Para administradores",
     "for-all": "Per tutti",
@@ -655,7 +655,7 @@
     "from": "from",
     "from-accounting-entry": "dall'ingresso in contabilità",
     "from-date": "a partire da",
-    "from-subaccount": "from-subaccount",
+    "from-subaccount": "Da sotto-conto",
     "full-access": "accesso completo",
     "full-path": "Percorso completo",
     "gap-found": "Gap trovato per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%",
@@ -675,7 +675,7 @@
     "generated-accounts": "0 account generati.",
     "generated-agents": "0 agenti generati.",
     "generated-at": "Generato il %when%",
-    "generated-contacts": "generated-contacts",
+    "generated-contacts": "%quantity% contatti generati.",
     "generated-customer-delivery-notes": "0 ha generato note di consegna del cliente.",
     "generated-customer-estimations": "0 stime dei clienti generate.",
     "generated-customer-groups": "0 gruppi di clienti generati.",
@@ -712,7 +712,7 @@
     "grouping-type": "Agrupación",
     "groups": "gruppi",
     "has-attachments": "ha allegati",
-    "has-parent": "ha-genitore",
+    "has-parent": "Ha genitore",
     "hash": "Hash",
     "header": "Intestazione",
     "heading-account-group-id": "Gruppo ID dell'account di intestazioni",
@@ -763,7 +763,7 @@
     "insert-update": "Inserisci o aggiorna",
     "installed": "installed",
     "installed-plugins": "Plugin installati",
-    "installer": "Programma di installazione FacturaScripts 2018 (Alpha)",
+    "installer": "Installer",
     "installer-p": "Benvenuti al programma di installazione FacturaScripts. Compilare i campi necessari per la connessione al database.",
     "installer-requirements": "Le seguenti estensioni e funzioni sono necessarie per FacturaScript:",
     "integrity-check": "Controllo integrità",
@@ -789,7 +789,7 @@
     "invoice-have-rectifying-cant-delete": "La fattura ha già una rettifica. Non posso essere cancellato.",
     "invoice-new-assigned-date": "Ci sono invocie con data più grande (0). Nuova data assegnata: 1",
     "invoice-number": "Numero di fattura",
-    "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
+    "invoice-receipts-diff": "C'è una differenza (%diff%) tra l'importo della fattura e la somma dei suoi ricevuti.",
     "invoice-regularized-cant-change-date": "La fattura è all'interno di una regolarizzazione di 0. La data non può essere modificata.",
     "invoice-regularized-cant-delete": "La fattura è all'interno di una regolarizzazione di 0. Non può essere cancellata.",
     "invoice-without-acc-entry": "Fattura senza movimento contabile",
@@ -824,7 +824,7 @@
     "keys": "keys",
     "lang-code": "Codice della lingua",
     "language": "Lingua",
-    "languages-ca_ES": "languages-ca_ES",
+    "languages-ca_ES": "Catalano",
     "languages-cs_CZ": "Ceco",
     "languages-de_DE": "languages-de_DE",
     "languages-en_EN": "Inglese",
@@ -961,14 +961,14 @@
     "missing-epigraph-data": "I dati mancano dall'epigrafe.",
     "missing-file": "Missing file",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
-    "mobile": "mobile",
+    "mobile": "Mobile",
     "model": "Modello",
     "model-not-found": "model-not-found",
     "monday": "lunedì",
     "month": "Mese",
     "month-1": "Gennaio",
     "month-10": "Ottobre",
-    "month-11": "Noeviembre",
+    "month-11": "Novembre",
     "month-12": "Dicembre",
     "month-2": "Febbraio",
     "month-3": "Marzo",
@@ -983,7 +983,7 @@
     "monthly": "Monthly",
     "monthly-payment": "Pago mensual",
     "months": "Mesi",
-    "more": "more",
+    "more": "Di più",
     "more-fields": "Altro campi",
     "more-plugins": "più plugin...",
     "move-lines": "Sposta linee",
@@ -1065,7 +1065,7 @@
     "open-exercise": "aprire-esercizio",
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Aperto",
-    "opening-acounting-completed": "opening-acounting-completed",
+    "opening-acounting-completed": "Apertura dell'esercizio corretta",
     "opening-operation": "Apertura",
     "operation": "Operazione",
     "operator": "Operatore",
@@ -1111,7 +1111,7 @@
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
     "pay": "Paga",
     "pay-with-card": "Paga con Carta di Credito",
-    "payment": "payment",
+    "payment": "Pagamento",
     "payment-date": "Data del pagamento",
     "payment-days": "Giorni di pagamento",
     "payment-method": "Metodo di pagamento",
@@ -1199,7 +1199,7 @@
     "process": "processo",
     "processing": "elaborazione",
     "product": "Prodotto",
-    "product-not-found": "Producto %ref% no encontrado",
+    "product-not-found": "Prodotto %ref% non trovato",
     "products": "Prodotti",
     "profile": "Perfil",
     "profit-and-loss": "Profitto e Perdita",
@@ -1312,13 +1312,13 @@
     "roles": "ruoli",
     "rules": "Regole",
     "run": "eseguire",
-    "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
+    "running-plugin-cron": "Esecuzione del cron del plugin %pluginName%",
     "sales": "I saldi",
     "sales-invoice": "Fattura di vendita",
     "sales-rate": "Tasso di vendita",
     "sales-subaccount-not-found": "conto-secondario-vendite-non-trovato",
     "same-group": "Lo stesso gruppo",
-    "saturday": "saturday",
+    "saturday": "Sabato",
     "save": "salvare",
     "save-data": "Salvare i dati",
     "save-filter": "Salva Filtro",
@@ -1331,7 +1331,7 @@
     "second-trimester": "Second trimester",
     "select": "select",
     "select-all": "Seleziona tutto",
-    "select-none": "select-none",
+    "select-none": "Seleziona nessuno",
     "select-plugin-zip-file": "Seleziona il file zip del plugin:",
     "select-user": "Seleziona Utente",
     "selected-quantity": "Quantità selezionata",
@@ -1345,10 +1345,10 @@
     "send-location": "Enviar ubicación",
     "send-mail": "Inviare mail",
     "send-mail-error": "Errore nell'invio dell'email",
-    "send-mail-ok": "send-mail-ok",
+    "send-mail-ok": "Email inviato correttamente",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Envió un audio",
-    "sent-a-document": "Envió un documento",
+    "sent-a-document": "Ha inviato un documento",
     "sent-a-location": "Ha inviato una posizione",
     "sent-a-picture": "Ha inviato un'immagine",
     "sent-a-video": "Ha inviato un video",
@@ -1399,12 +1399,12 @@
     "sort-by-column": "Ordina per colonna",
     "sort-by-date-asc": "Ordina per data disc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-asc": "Ordina per riferimento asc.",
     "sort-by-ref-desc": "Ordina per riferimento discendente",
     "sorted-asc": "Ordinato ascendente",
     "sorted-desc": "Ordinato discendente",
     "source": "fonte",
-    "source-code": "Source code",
+    "source-code": "Codice sorgente",
     "special-account": "Conto speciale",
     "special-accounting-entries": "Voci contabili speciali",
     "special-accounts": "conti speciali",
@@ -1521,7 +1521,7 @@
     "this-month": "Questo mese",
     "this-week": "questa-settimana",
     "this-year": "Quest'anno",
-    "thousands-separator": "migliaia",
+    "thousands-separator": "separatore delle migliaia",
     "thursday": "giovedì",
     "ticket": "Ticket",
     "tickets": "Tickets",
@@ -1548,8 +1548,8 @@
     "town": "Cittadina",
     "tracking-code": "codice di tracciamento",
     "transfer": "trasferimento",
-    "transfers": "transfers",
-    "transfers-stock": "Transfers stock",
+    "transfers": "Trasferimenti",
+    "transfers-stock": "Trasferimenti di stock",
     "translation": "Traduzione",
     "translations": "Traduzioni",
     "travel": "Viaggio",
@@ -1563,7 +1563,7 @@
     "type-error": "Tipo di errore",
     "type-info": "Tipo informazioni",
     "type-notice": "Tipo di avviso",
-    "type-success": "type-success",
+    "type-success": "Tipo corretto",
     "type-warning": "Type warning",
     "unbalance": "sbilanciato",
     "unbalanced-entry": "Prenotazione non bilanciata",
@@ -1639,7 +1639,7 @@
     "wednesday": "wednesday",
     "weeks": "Settimane",
     "weight": "Peso",
-    "which-logs-store": "Which logs store",
+    "which-logs-store": "Quali log archiviare",
     "width": "width",
     "wildcard": "Wildcard",
     "wildcard-general-info": "Verrà sostituito dal valore corrispondente",
