--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -35,7 +35,7 @@
     "accounting-entry-macros-title": "Używanie makr w polu opisu",
     "accounting-exercise-not-found": "Ejercicio no encontrado",
     "accounting-file": "Archiwum rachunkowe",
-    "accounting-heading": "Epígrafe",
+    "accounting-heading": "Nagłówek",
     "accounting-heading-code": "ID Nagłówka rachunku",
     "accounting-items": "Pozycje księgowe",
     "accounting-lines-error": "Error en las líneas del asiento contable",
@@ -45,12 +45,12 @@
     "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
     "accounts": "Cuentas",
     "accrual-date": "Fecha devengo",
-    "action": "Acción",
+    "action": "Działanie",
     "actions": "Acciones",
     "active": "Activo",
     "actual-cost-price": "Rzeczywista cena zakupu",
     "add": "Añadir",
-    "add-all-disabled": "Añadir todo Deshabilitado",
+    "add-all-disabled": "Dodaj wszystko wyłączone",
     "add-all-enabled": "Dodaj wszystko włączone",
     "add-extra-lines": "Añadir líneas extra",
     "add-file": "Dodaj plik",
@@ -83,7 +83,7 @@
     "allow-get-data": "Permitir ACCESO",
     "allow-import": "Permitir importar",
     "allow-marketing": "Permite marketing",
-    "allow-post-data": "Permitir MODIFICAR",
+    "allow-post-data": "Zezwól na MODYFIKACJĘ",
     "allow-put-data": "Zezwól na DODAWANIE",
     "allow-sale-without-stock": "Permitir venta sin stock",
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
@@ -123,7 +123,7 @@
     "attribute-value-2": "Wartość atrybutu 2",
     "attribute-value-3": "Atributo 3",
     "attribute-value-4": "Atrybut 4",
-    "attribute-values": "Valores de atributo",
+    "attribute-values": "Wartości atrybutu",
     "attributes": "Atributos",
     "audio": "Audio",
     "august": "Agosto",
@@ -137,7 +137,7 @@
     "average-cost": "Precio medio",
     "average-purchase-price": "Precio medio de compra",
     "back": "Volver",
-    "background-color": "Color de fondo",
+    "background-color": "Kolor tła",
     "background-overlay": "Kolor nakładki na tle",
     "badge": "Distintivo",
     "balance": "Saldo",
@@ -184,7 +184,7 @@
     "cannot-generate-accounting-entry": "Błąd podczas generowania księgowania faktury %invoice%",
     "cant-assign-date-already-regularized": "No se puede asignar la fecha %date% porque ya hay una regularización de %tax% para ese periodo.",
     "cant-assing-subaccount-supplier": "Imposible asociar la subcuenta para el proveedor %supplierCode%",
-    "cant-associate-customer-subaccount": "Imposible asociar la subcuenta para el cliente %customerCode%",
+    "cant-associate-customer-subaccount": "Nie można powiązać subkonta z klientem %customerCode%",
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree un asiento nuevo.",
     "cant-change-agent-in-settlement": "Nie można zmienić agenta. Prowizja jest już rozliczona.",
     "cant-connect-database": "Nie można połączyć z bazą danych",
@@ -208,7 +208,7 @@
     "cant-remove-invoice-refund": "Nie można usunąć faktury, która ma już zwrot",
     "cant-remove-receipt": "Nie można usunąć rachunku",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
-    "card": "Tarjeta",
+    "card": "Karta",
     "carrier": "Transportista",
     "carriers": "Przewoźnicy",
     "cash": "Efectivo",
@@ -219,7 +219,7 @@
     "change": "Cambiar",
     "channel": "Kanał",
     "charge-date": "Fecha cargo",
-    "chart": "Gráfico",
+    "chart": "Wykres",
     "charts": "Gráficos",
     "chat": "Chat",
     "check-table": "Error al comprobar la tabla '%tableName%'",
@@ -235,7 +235,7 @@
     "choose-serie": "Elige serie",
     "choose-source": "Elegir el origen",
     "cifnif": "CIF\/NIF",
-    "cities": "Ciudades",
+    "cities": "Miasta",
     "city": "Ciudad",
     "click-link-to-add": "Puede añadir archivos desde la biblioteca, en el menú administrador.",
     "clone": "Duplicar",
@@ -351,7 +351,7 @@
     "customer-delivery-note": "Albarán de Cliente",
     "customer-delivery-notes": "Notatki dostawy klienta",
     "customer-estimation": "Presupuesto de Cliente",
-    "customer-estimations": "Presupuestos a clientes",
+    "customer-estimations": "Szacowania dla klientów",
     "customer-group": "Grupo de clientes",
     "customer-groups": "Grupos de clientes",
     "customer-invoice": "Factura de Cliente",
@@ -376,7 +376,7 @@
     "data-source": "Datos de origen",
     "database": "Base de datos",
     "database-error": "Błąd połączenia z bazą danych",
-    "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
+    "database-name-must-be-lowercase": "Nazwa bazy danych musi być pisana małymi literami",
     "date": "Data",
     "date-in": "Data wejścia",
     "date-of-suspension": "Data zawieszenia",
@@ -416,7 +416,7 @@
     "delete-file": "Eliminar archivo",
     "delete-logs": "Usuń historię",
     "delete-opening": "Usuń otwarcie",
-    "delete-record": "Eliminar registro",
+    "delete-record": "Usuń wpis",
     "Deleted": "Usunięto",
     "deleted-model": "Usunięty %model% (%key%) %desc%",
     "delivery-note": "Albarán",
@@ -556,7 +556,7 @@
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
-    "es-tax-regime-especial-agp": "Agricultura, ganadería y pesca",
+    "es-tax-regime-especial-agp": "Rolnictwo, hodowla zwierząt i rybołówstwo",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
@@ -826,7 +826,7 @@
     "language": "Język",
     "languages-ca_ES": "Catalán",
     "languages-cs_CZ": "Checo",
-    "languages-de_DE": "Alemán",
+    "languages-de_DE": "Niemiecki",
     "languages-en_EN": "Inglés",
     "languages-es_AR": "Español (Argentina)",
     "languages-es_CL": "Espanol (Chile)",
@@ -858,7 +858,7 @@
     "last-purchase-price": "Último precio de compra",
     "last-quarter": "El pasado cuatrimestre",
     "last-semester": "Ostatni semestr",
-    "last-trimester": "El último trimestre",
+    "last-trimester": "Ostatni kwartał",
     "last-update": "Última modificación",
     "last-user": "Último usuario",
     "last-week": "La semana pasada",
@@ -904,7 +904,7 @@
     "logo": "Logotipo",
     "logout": "Cerrar sesión",
     "logout-ok": "Sesión cerrada correctamente.",
-    "logs": "Logs",
+    "logs": "Dzienniki",
     "long": "Largo",
     "longitude": "Longitud",
     "longitude-abb": "Long",
@@ -952,9 +952,9 @@
     "method-payment": "Forma de pago",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
-    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
+    "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
     "minimum-stock": "Stock mínimo",
-    "minutes": "Minutos",
+    "minutes": "Minuty",
     "mismatched-accounting-entry": "Asiento descuadrado",
     "missing-data-epigraph-group": "Faltan datos en el grupo de epígrafes.",
     "missing-data-subaccount": "Faltan datos en la subcuenta.",
@@ -982,7 +982,7 @@
     "month-wildcard-info": "Aktualny miesiąc (z obecnej daty)",
     "monthly": "Mensual",
     "monthly-payment": "Pago mensual",
-    "months": "Meses",
+    "months": "Miesiące",
     "more": "Más",
     "more-fields": "Más campos",
     "more-plugins": "Más plugins...",
@@ -1011,7 +1011,7 @@
     "news": "Noticias",
     "next": "Siguiente",
     "nick": "Nick",
-    "no": "No",
+    "no": "Nie",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-extra-lines": "No añadir líneas extra",
@@ -1020,7 +1020,7 @@
     "no-outstanding-amount": "No hay importe pendiente",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Brak odniesienia",
-    "no-selected-item": "Ningún elemento seleccionado",
+    "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Kolumny nieedytowalne: %columns%",
@@ -1075,7 +1075,7 @@
     "options-button-header": "Układ i uprawnienia",
     "order": "Pedido",
     "order-email-subject": "Su pedido %code%",
-    "order-email-text": "Buenos días, le adjunto su pedido %code%",
+    "order-email-text": "Dzień dobry, załączam Twoje zamówienie %code%",
     "orders": "Pedidos",
     "origin": "Origen",
     "origin-warehouse": "Magazyn źródłowy",
@@ -1097,7 +1097,7 @@
     "paid-or-unpaid": "Pagado o impagado",
     "paid-receipts-prevent-action": "No se puede ejecutar esta acción habiendo recibos pagados",
     "parent": "Padre",
-    "parent-account": "Cuenta Padre",
+    "parent-account": "Konto główne",
     "parent-family-cant-be-child": "Rodzina nadrzędna nie może być taka sama jak dziecko.",
     "parent-group": "Grupo Padre",
     "parent-group-cant-be-the-same-group": "El Grupo Padre no puede ser el mismo grupo",
@@ -1138,7 +1138,7 @@
     "phone2": "Teléfono 2",
     "phones": "Teléfonos",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
-    "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
+    "php-extension-not-found": "Nie masz zainstalowanego rozszerzenia %extension% PHP.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "physical-stock": "Alyz fizyczny",
     "picking": "Picking",
@@ -1196,16 +1196,16 @@
     "priority": "Prioridad",
     "private": "Privado",
     "private-key": "Clave privada",
-    "process": "Proceso",
+    "process": "Proces",
     "processing": "Przetwarzanie",
     "product": "Producto",
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Productos",
-    "profile": "Perfil",
+    "profile": "Profil",
     "profit-and-loss": "Pérdidas y Ganancias",
     "profit-and-loss-balance": "Balance de Pérdidas y Ganancias",
     "profits": "Zyski",
-    "project": "Proyecto",
+    "project": "Projekt",
     "projects": "Proyectos",
     "provider-reference": "Referéncia de proveedor",
     "province": "Provincia",
@@ -1215,10 +1215,10 @@
     "purchase-rate": "Tasa de compras",
     "purchased-quantity": "Cant. comprada",
     "purchases": "Compras",
-    "purchases-subaccount-not-found": "Subcuenta de compras no encontrada",
+    "purchases-subaccount-not-found": "Nie znaleziono subkonta zakupów",
     "pvp": "PVP",
-    "pvp-total": "Precio total",
-    "pvp-unit": "Precio minorista unitario",
+    "pvp-total": "Cena całkowita",
+    "pvp-unit": "Jednostkowa cena detaliczna",
     "pvpsindto-line-error": "Error en el valor de 'pvpsindto' de la línea %reference% del documento. Valor correcto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Error en el valor de 'pvptotal' de la línea %reference% del documento. Valor correcto: %total%",
     "quantity": "Cantidad",
@@ -1300,7 +1300,7 @@
     "resource": "Recurso",
     "respond": "Responder",
     "restore": "Restaurar",
-    "restore-data": "Restaurar datos",
+    "restore-data": "Przywróć dane",
     "result": "Resultado",
     "retention": "Zatrzymanie",
     "retentions": "Zatrzymania",
@@ -1320,7 +1320,7 @@
     "same-group": "Ta sama grupa",
     "saturday": "Sábado",
     "save": "Zapisz",
-    "save-data": "Guardar datos",
+    "save-data": "Zapisz dane",
     "save-filter": "Guardar filtro",
     "sdk": "SDK",
     "search": "Szukaj",
@@ -1386,7 +1386,7 @@
     "show-quantity": "Pokaż ilość w druku",
     "show-section-new": "Pokaż nową sekcję",
     "signature": "Podpis",
-    "simple": "Simple",
+    "simple": "Prosty",
     "simplified": "Uproszczona",
     "size": "Tamaño",
     "sketch": "Boceto",
@@ -1416,7 +1416,7 @@
     "start-hour": "Godzina rozpoczęcia",
     "start-time": "Czas rozpoczęcia",
     "starting-cron": "Iniciando cron de FacturaScripts...",
-    "state": "Estado",
+    "state": "Stan",
     "states": "Estados",
     "status": "Estado",
     "status-document": "Stan dokumentu",
@@ -1453,7 +1453,7 @@
     "sum-total-line-tax-must-be": "Suma podatków od wszystkich wierszy powinna wynosić: %lineTotalTax%",
     "summary": "Resumen",
     "sums-and-balances": "Sumas y saldos",
-    "sunday": "Domingo",
+    "sunday": "Niedziela",
     "supplied": "Suplido",
     "supplied-amount": "Suplidos",
     "supplied-subaccount-not-found": "Podrachunek zaopatrzony nie znaleziony",
@@ -1489,7 +1489,7 @@
     "table-size": "Tamaño de la tabla",
     "tables": "Tablas",
     "task": "Tarea",
-    "tasks": "Tareas",
+    "tasks": "Zadania",
     "tasks-completed-title": "Tareas completadas",
     "tasks-component-title": "Tareas",
     "tasks-personal-title": "Zadania osobiste",
@@ -1509,13 +1509,13 @@
     "templates": "Plantillas",
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
-    "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
+    "test-sendmail-not-implemented": "Test sterownika poczty sendmail nie jest zaimplementowany",
     "text-color": "Color de texto",
     "texts": "Textos",
     "third-quarter": "3º trimestre",
     "third-trimester": "Trzeci kwartał",
     "this-last-fortnight": "Los últimos 15 días",
-    "this-last-month": "Los últimos 30 días",
+    "this-last-month": "Ostatnie 30 dni",
     "this-last-week": "Los últimos 7 días",
     "this-last-year": "Los últimos 365 días",
     "this-month": "Este mes",
@@ -1602,7 +1602,7 @@
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido para un día",
     "validate": "Validar",
-    "validate-iban": "Validar IBAN",
+    "validate-iban": "Waliduj IBAN",
     "valuation-type": "Tipo de valoración",
     "value": "Wartość",
     "value-x": "Valor X",
@@ -1650,7 +1650,7 @@
     "without-regularization": "Sin regularización",
     "without-tax": "Sin IVA",
     "without-taxation": "Bez opodatkowania",
-    "wizard": "Asistente",
+    "wizard": "Asystent",
     "wizard-p": "Wypełnij ten formularz dotyczący swojej firmy, aby zakończyć konfigurację.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
     "work-events": "Wydarzenia pracy",
@@ -1674,7 +1674,7 @@
     "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Debería cambiar su contraseña",
     "your": "Suyo",
-    "zip-code": "Código Postal",
+    "zip-code": "Kod pocztowy",
     "zip-codes": "Kody pocztowe",
     "zip-error-wrong-structure": "Błędna struktura pliku zip. Musi zawierać folder pluginu i tylko jeden plugin."
 }
