--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -347,7 +347,7 @@
     "customer-account-not-found": "customer-account-not-found",
     "customer-banking-accounts": "Contas bancárias",
     "customer-code": "Código Cliente",
-    "customer-commission-info": "customer-commission-info",
+    "customer-commission-info": "Sólo se aplicará quando a venda for ao cliente selecionado",
     "customer-delivery-note": "Nota de Entrega de Cliente",
     "customer-delivery-notes": "Notas de Entrega de Clientes",
     "customer-estimation": "Estimativa de Cliente",
@@ -414,7 +414,7 @@
     "delete-closing": "Eliminar fecho",
     "delete-data": "Eliminar dados",
     "delete-file": "Eliminar ficheiro",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Eliminar histórico",
     "delete-opening": "Eliminar abertura",
     "delete-record": "Remover registro",
     "Deleted": "Eliminado",
@@ -491,7 +491,7 @@
     "downloads": "downloads",
     "drag": "Arrastrar",
     "dto": "Disco.",
-    "dto-2": "dto-2",
+    "dto-2": "Dto. 2",
     "duplicate-record": "duplicate-record",
     "duplicated-reference": "Referência '%reference%' duplicada",
     "duplicated-request": "duplicated-request",
@@ -513,13 +513,13 @@
     "email-signature": "Assinatura de email",
     "email-to": "Email To",
     "emails": "Emails",
-    "emails-sent": "emails-sent",
+    "emails-sent": "Emails enviados",
     "employee": "Employee",
     "employees": "employees",
     "empty": "Vazio",
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
     "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
-    "enable": "Habilitar",
+    "enable": "Ativar",
     "enable-api": "Enable API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "ativado",
@@ -559,7 +559,7 @@
     "es-tax-regime-especial-agp": "Régimen especial da agricultura, pecuária e pesca",
     "es-tax-regime-exempt": "Isento",
     "es-tax-regime-general": "Régimen general",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-gold": "Regime especial do ouro de investimento",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Sobretaxa de regime especial",
@@ -594,7 +594,7 @@
     "export": "exportar",
     "export-bill": "export-bill",
     "extra-file": "Extra file",
-    "failed": "Fallido",
+    "failed": "Falhado",
     "families": "Famílias",
     "family": "Família",
     "family-code": "Código familiar",
@@ -643,7 +643,7 @@
     "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Para compra",
     "for-sale": "À venda",
-    "foresee": "Foresee",
+    "foresee": "Prever",
     "format": "formato",
     "formula-cost-price": "formula-cost-price",
     "formula-sale-price": "formula-sale-price",
@@ -732,7 +732,7 @@
     "homepage": "Página inicial",
     "host": "Hospedeiro",
     "hour": "Hora",
-    "hours": "hours",
+    "hours": "Horas",
     "http": "HTTP",
     "https": "HTTPS",
     "i-forgot-password": "Esqueci minha senha",
@@ -792,7 +792,7 @@
     "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
-    "invoice-without-acc-entry": "invoice-without-acc-entry",
+    "invoice-without-acc-entry": "Fatura sem lançamento",
     "invoiced": "faturado",
     "invoices": "Faturas",
     "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
@@ -875,7 +875,7 @@
     "level3": "Nível 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
-    "library": "library",
+    "library": "Biblioteca",
     "license": "Licença",
     "like-than": "Mais do que",
     "line": "Linha",
@@ -885,7 +885,7 @@
     "load-def-acc-plan": "load-def-acc-plan",
     "loading-controller": "Controlador de carga: '0'",
     "location": "Location",
-    "lock-accounting": "lock-accounting",
+    "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "lock-entry",
     "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Bloquear-Desbloquear",
@@ -951,7 +951,7 @@
     "meta-description": "FacturaScripts é um software de contabilidade e contabilidade para as PMEs. É um software livre sob a licença GNU \/ LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
-    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
     "minutes": "Minutos",
@@ -1035,7 +1035,7 @@
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "Não é uma imagem válida",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "Nota",
     "notes": "Notas",
@@ -1211,7 +1211,7 @@
     "province": "Província",
     "provinces": "províncias",
     "public": "Público",
-    "public-key": "Clave pública",
+    "public-key": "Chave pública",
     "purchase-rate": "Taxa de compra",
     "purchased-quantity": "q",
     "purchases": "Compras",
@@ -1262,7 +1262,7 @@
     "refunds": "Reembolsos",
     "register": "Registrar",
     "register-installation": "register-installation",
-    "register-installation-p": "register-installation-p",
+    "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
     "registered-installation": "r",
     "registered-installation-p": "registered-installation-p",
@@ -1307,7 +1307,7 @@
     "review-date": "Data de revisão",
     "right": "Direita",
     "risky-customer": "Cliente de Risco",
-    "rol": "Rol",
+    "rol": "Grupo",
     "role": "Role",
     "roles": "Roles",
     "rules": "Rules",
@@ -1316,13 +1316,13 @@
     "sales": "Vendas",
     "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
-    "sales-subaccount-not-found": "sales-subaccount-not-found",
+    "sales-subaccount-not-found": "Subconta de vendas não encontrada",
     "same-group": "Mesmo grupo",
     "saturday": "sábado",
     "save": "Salve ",
     "save-data": "Guardar dados",
     "save-filter": "Salvar Filtros",
-    "sdk": "sdk",
+    "sdk": "SDK",
     "search": "Pesquisa",
     "search-document": "Digite o número de %doctype% para pesquisar.",
     "search-product": "Procurar produto",
@@ -1563,7 +1563,7 @@
     "type-error": "Type error",
     "type-info": "Informação do tipo",
     "type-notice": "Tipo aviso",
-    "type-success": "type-success",
+    "type-success": "Tipo correto",
     "type-warning": "Type warning",
     "unbalance": "Desequilíbrio",
     "unbalanced-entry": "Asiento descuadrado",
@@ -1580,7 +1580,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
     "until-accounting-entry": "until-accounting-entry",
-    "until-date": "until-date",
+    "until-date": "Até",
     "until-subaccount": "until-subaccount",
     "update": "update",
     "update-stock": "Atualizar stock",
@@ -1613,7 +1613,7 @@
     "variants": "Variantes",
     "vat": "CUBA",
     "vat-document": "VAT Document",
-    "vat-exception": "Excepción de IVA",
+    "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
     "vat-number-not-vies": "O número '%vat-number%' não está registado no sistema VIES",
     "vat-regime": "Regime de IVA",
