--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -817,7 +817,7 @@
     "journal-closing": "DIari de tancament",
     "journal-opening": "Diari d'obertura",
     "journals": "Diaris",
-    "july": "Julio",
+    "july": "Juliol",
     "june": "Juny",
     "justified": "justified",
     "key-google-maps": "Clau de Google Maps",
@@ -854,7 +854,7 @@
     "last-ip": "Última IP",
     "last-month": "El més passat",
     "last-price-estimation": "Última precio de presupuesto",
-    "last-price-sale": "Último precio de venta",
+    "last-price-sale": "Últim preu de venda",
     "last-purchase-price": "Últim preu de compra",
     "last-quarter": "El quatrimestre passat",
     "last-semester": "El semestre passat",
@@ -973,11 +973,11 @@
     "month-2": "Febrer",
     "month-3": "Marzo",
     "month-4": "Abril",
-    "month-5": "Mayo",
+    "month-5": "Maig",
     "month-6": "Juny",
     "month-7": "Juliol",
     "month-8": "Agost",
-    "month-9": "Septiembre",
+    "month-9": "Setembre",
     "month-name": "Nom del més",
     "month-wildcard-info": "Més actual (de la data actual)",
     "monthly": "Mensualment",
@@ -1085,7 +1085,7 @@
     "others-filters": "Altres filtres",
     "out-of-stock": "Sense estoc",
     "page": "Pàgina",
-    "page-break": "Salto de página",
+    "page-break": "Saltar pàgina",
     "page-configuration": "Pàgina de configuració",
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
@@ -1108,7 +1108,7 @@
     "pattern": "Patró",
     "pattern-without-number": "El patró triat no inclou número, per tant és molt probable que generi codis duplicats.",
     "pattern-without-serie": "El patró triat no inclou sèrie, per la qual cosa és possible que generi codis duplicats per a cada sèrie",
-    "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
+    "pattern-without-year": "El patró elegit no inclou exercici o data, per la qual cosa és possible que genere codis duplicats en cada exercici",
     "pay": "Pagar",
     "pay-with-card": "Pargar en targeta",
     "payment": "payment",
@@ -1195,7 +1195,7 @@
     "printing-formats": "Formats d'impressió",
     "priority": "Prioritat",
     "private": "private",
-    "private-key": "Clave privada",
+    "private-key": "Clau privada",
     "process": "Procés",
     "processing": "processing",
     "product": "Producte",
@@ -1399,7 +1399,7 @@
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha ascendente",
     "sort-by-date-desc": "Ordenar per data desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
     "sorted-asc": "Ordenat ascendent",
     "sorted-desc": "Ordenat descendent",
@@ -1528,7 +1528,7 @@
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
-    "title-font-size": "mida-font-títol",
+    "title-font-size": "Mida font títol",
     "title-url": "Títul (URL)",
     "to": "Per a",
     "to-refund": "A devolver",
@@ -1625,7 +1625,7 @@
     "video": "Vídeo",
     "vies-check-success": "El número '%vat-number%' està registrat en el sistema VIES",
     "view-api": "Ver API",
-    "view-column-net-subtotal": "Ver columna subtotal o neto",
+    "view-column-net-subtotal": "Veure columna subtotal o net",
     "view-estimation": "V",
     "view-order": "Veure comanda",
     "warehouse": "Magatzem",
@@ -1669,7 +1669,7 @@
     "you-cant-delete-primary-variant": "No pots eliminar la variant principal del producte",
     "you-sent-a-audio": "Vas enviar un àudio",
     "you-sent-a-document": "Vas enviar un document",
-    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-location": "Vas enviar una ubicació",
     "you-sent-a-picture": "Has enviat una imatge",
     "you-sent-a-video": "Vas enviar un vídeo",
     "you-should-change-passwd": "Deuries canviar la teua contrasenya",
