--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -188,7 +188,7 @@
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree uno nuevo.",
     "cant-change-agent-in-settlement": "No se puede cambiar el agente en el asentamiento",
     "cant-connect-database": "Não foi possível conectar ao banco de dados!",
-    "cant-convert-to-innodb": "Não é possível converter a tabela '0' para InnoDB. Impresscindible para FacturaScripts.",
+    "cant-convert-to-innodb": "Não é possível converter a tabela '%tableName%' para InnoDB. Essencial para o FacturaScripts.",
     "cant-create-customer-subaccount": "Impossível criar a subconta para o cliente %customerCode%",
     "cant-create-folder": "Não é possível criar uma pasta.",
     "cant-create-subaccount-supplier": "Não é possível criar a subconta do provedor",
@@ -289,7 +289,7 @@
     "concept": "Conceito",
     "conditions": "conditions",
     "configure-columns": "Configurador de colunas",
-    "confirm": "confirme",
+    "confirm": "Confirmar",
     "confirm-delete": "Confirmar excluir?",
     "connect": "Conectar",
     "contact": "Contato",
@@ -465,7 +465,7 @@
     "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "não-agrupar",
     "do-nothing": "Não fazer nada",
-    "doc-type": "Document type",
+    "doc-type": "Tipo de documento",
     "document": "Documento",
     "document-configuration": "Configuração de documentos",
     "document-report": "Relatório de documentos",
@@ -491,7 +491,7 @@
     "downloads": "downloads",
     "drag": "Arrastar",
     "dto": "Disco.",
-    "dto-2": "dto-2",
+    "dto-2": "Dto. 2",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referência '%reference%' duplicada",
     "duplicated-request": "Solicitação duplicada",
@@ -519,7 +519,7 @@
     "empty": "Vazio",
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
     "empty-ref-or-missing": "Referência vazia ou produto não encontrado",
-    "enable": "Habilitar",
+    "enable": "Ativar",
     "enable-api": "Ativar API",
     "enable-updates-beta": "Ativar atualizações beta",
     "enabled": "ativado",
@@ -559,7 +559,7 @@
     "es-tax-regime-especial-agp": "Regime especial da agricultura, pecuária e pesca",
     "es-tax-regime-exempt": "Isento do regime de impostos",
     "es-tax-regime-general": "Regime geral",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
+    "es-tax-regime-gold": "Regime especial do ouro de investimento",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Sobretaxa de equivalência",
@@ -593,7 +593,7 @@
     "expired-receipt": "R",
     "export": "exportar",
     "export-bill": "export-bill",
-    "extra-file": "Extra file",
+    "extra-file": "Arquivo extra",
     "failed": "Falha",
     "families": "Famílias",
     "family": "Família",
@@ -629,7 +629,7 @@
     "first-trimester": "Primeiro trimestre",
     "fiscal-data": "Dados fiscais",
     "fiscal-exercise": "Exercício fiscal",
-    "fiscal-id": "Id.",
+    "fiscal-id": "Id. Fiscal",
     "fiscal-number": "fiscal-number",
     "fixed-value": "fixed-value",
     "flag": "Bandeira",
@@ -716,7 +716,7 @@
     "hash": "Hash",
     "header": "Cabeçalho",
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
-    "heading-account-id-root": "Cabeçalho da raiz da conta",
+    "heading-account-id-root": "ID raiz",
     "health": "Saúde",
     "height": "Altura",
     "hello": "Olá",
@@ -732,7 +732,7 @@
     "homepage": "Página inicial",
     "host": "Hospedeiro",
     "hour": "Hora",
-    "hours": "hours",
+    "hours": "Horas",
     "http": "HTTP",
     "https": "HTTPS",
     "i-forgot-password": "esqueci-senha",
@@ -792,7 +792,7 @@
     "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma de seus recibos.",
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
-    "invoice-without-acc-entry": "invoice-without-acc-entry",
+    "invoice-without-acc-entry": "Fatura sem lançamento",
     "invoiced": "faturado",
     "invoices": "Faturas",
     "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
@@ -867,7 +867,7 @@
     "latitude-abb": "Lat",
     "ledger": "Diário",
     "left": "Left",
-    "level": "Level",
+    "level": "Nível",
     "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nível para visualizar custos",
     "level1": "Level 1",
@@ -875,7 +875,7 @@
     "level3": "Nível 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
-    "library": "library",
+    "library": "Biblioteca",
     "license": "Licença",
     "like-than": "Mais do que",
     "line": "Linha",
@@ -885,7 +885,7 @@
     "load-def-acc-plan": "load-def-acc-plan",
     "loading-controller": "Carregando controlador: '%controllerName%'",
     "location": "Location",
-    "lock-accounting": "lock-accounting",
+    "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "lock-entry",
     "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Bloquear-Desbloquear",
@@ -897,7 +897,7 @@
     "login-image": "Imagem de login",
     "login-ok": "Login bem-sucedido (cookie). Usuário: '%nick%'",
     "login-password-fail": "Usuário ou senha incorretos",
-    "login-text": "Entrar",
+    "login-text": "Digite seu nome de usuário e senha para entrar",
     "login-to-continue": "Faça login para continuar",
     "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Usuário não encontrado",
@@ -1029,13 +1029,13 @@
     "normal": "normal",
     "not-allowed-delete": "Não tem permiso para eliminar",
     "not-allowed-modify": "n",
-    "not-enough-stock": "not-enough-stock",
+    "not-enough-stock": "Não há estoque suficiente de %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "Número fiscal inválido",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "Não é uma imagem válida",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "Nota",
     "notes": "Notas",
@@ -1129,7 +1129,7 @@
     "percentage": "Percentagem",
     "percentage-commission": "% Comissão",
     "percentage-discount": "p",
-    "percentage-surcharge": "% Surcharge",
+    "percentage-surcharge": "% Acréscimo",
     "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
@@ -1143,10 +1143,10 @@
     "physical-stock": "Estoque físico",
     "picking": "Preparação",
     "plan": "Plano",
-    "please-enter-value": "Por favor insira um valor",
+    "please-enter-value": "Por favor, insira um valor",
     "plugin": "Plugin",
     "plugin-deleted": "O plugin 0 foi excluído com sucesso.",
-    "plugin-disabled": "Plugin desativado com sucesso.",
+    "plugin-disabled": "O Plugin %pluginName% foi desativado com sucesso.",
     "plugin-enabled": "Plugin ativado com sucesso.",
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
@@ -1166,12 +1166,12 @@
     "points": "points",
     "points-of-interest": "Pontos de interesse",
     "port": "Porta",
-    "position": "Posição",
+    "position": "Cargo",
     "positive-balance": "Saldo positivo",
     "post-office-box": "Caixa postal",
     "postgresql": "PostgreSQL",
     "precio": "Preço",
-    "predefined-concepts": "Predefined Concepts",
+    "predefined-concepts": "Conceitos Predefinidos",
     "preferences": "Preferências",
     "preview": "Pré-visualização",
     "previous": "Anterior",
@@ -1211,8 +1211,8 @@
     "province": "Província",
     "provinces": "províncias",
     "public": "Público",
-    "public-key": "Clave pública",
-    "purchase-rate": "Taxa de compra",
+    "public-key": "Chave pública",
+    "purchase-rate": "Taxa de compras",
     "purchased-quantity": "q",
     "purchases": "Compras",
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
@@ -1262,7 +1262,7 @@
     "refunds": "Reembolsos",
     "register": "Registrar",
     "register-installation": "register-installation",
-    "register-installation-p": "register-installation-p",
+    "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
     "registered-installation": "r",
     "registered-installation-p": "registered-installation-p",
@@ -1278,7 +1278,7 @@
     "removing-logs-until": "Eliminando logs hasta el %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
-    "renumber-accounting": "Renumber Accounting",
+    "renumber-accounting": "Renumerar Lançamentos",
     "renumber-accounting-error": "Ocorreu um erro ao renumerar lançamentos contábeis no exercício fiscal %exerciseCode%",
     "renumber-accounting-ok": "Reordenação de lançamentos contábeis concluída",
     "renumber-accounting-p": "Renumerar as entradas por data, de menor para maior",
@@ -1289,7 +1289,7 @@
     "reply": "Resposta",
     "report": "Relatório",
     "report-grouping-account": "Agrupar por contas",
-    "report-non-grouping-account": "Non group by account",
+    "report-non-grouping-account": "Não agrupar por contas",
     "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
     "request-sent": "Solicitação enviada",
@@ -1307,7 +1307,7 @@
     "review-date": "Data de revisão",
     "right": "Direita",
     "risky-customer": "Cliente de Risco",
-    "rol": "Rol",
+    "rol": "Grupo",
     "role": "Função",
     "roles": "Funções",
     "rules": "Regras",
@@ -1316,14 +1316,14 @@
     "sales": "Vendas",
     "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
-    "sales-subaccount-not-found": "sales-subaccount-not-found",
+    "sales-subaccount-not-found": "Subconta de vendas não encontrada",
     "same-group": "Mesmo grupo",
     "saturday": "sábado",
     "save": "Salvar",
     "save-data": "Guardar dados",
     "save-filter": "Salvar Filtros",
-    "sdk": "sdk",
-    "search": "Pesquisa",
+    "sdk": "SDK",
+    "search": "Pesquisar",
     "search-document": "Digite o número do %doctype% para pesquisar.",
     "search-product": "Buscar produto",
     "second-hand": "Segunda mão",
@@ -1370,7 +1370,7 @@
     "settlement-product": "Produto de liquidação",
     "settlements": "settlements",
     "setup-options": "Opções de configuração",
-    "shipping": "Shipping",
+    "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
     "shop": "Loja",
     "shops": "Tiendas",
@@ -1422,7 +1422,7 @@
     "status-document": "Documento de status",
     "status-name-valid-length": "Nome do status inválido. Deve ter entre 1 e 20 caracteres.",
     "status-value-is-number": "El campo estado deve ser numérico.",
-    "stock": "estoque",
+    "stock": "Estoque",
     "stock-transfer": "stock transfer",
     "stock-transfers": "stock transfers",
     "stockmax": "Estoque máximo",
@@ -1432,7 +1432,7 @@
     "stripe": "Stripe",
     "structured-data-csv": "Arquivo CSV",
     "sub-account": "Sub conta",
-    "sub-type": "sub-type",
+    "sub-type": "Subtipo",
     "subaccount": "Subconta",
     "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
@@ -1483,7 +1483,7 @@
     "suspended": "Suspenso",
     "swift": "Rápido\/BIC",
     "symbol": "Símbolo",
-    "table": "table",
+    "table": "Tabela",
     "table-checked": "Tabela 0 verificada.",
     "table-not-found": "Tabela %tableName% não encontrada",
     "table-size": "Tamanho da Tabela",
@@ -1498,7 +1498,7 @@
     "tax-areas": "Áreas de impostos",
     "tax-base": "Tax base",
     "tax-credit-account": "Conta de crédito para impostos",
-    "tax-debit-account": "Debit account for taxes",
+    "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
     "telemetry-data-to-send": "dados de telemetria para enviar",
@@ -1542,7 +1542,7 @@
     "total-value-error": "Valor total de %docType% %docCode% incorreto (%docTotal%). Valor correto: %calcTotal%",
     "total-with-taxes": "Total com impostos",
     "totalirpf-value-error": "Quantidade total de IRPF de 0 1 incorreta (2). Valor correto: 3",
-    "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
+    "totaliva-value-error": "Valor total do IVA de %docType% %docCode% incorreto (%docTotalTax%). Valor correto: %calcTotalTax%",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
     "totals": "Totais",
     "town": "Cidade",
@@ -1563,7 +1563,7 @@
     "type-error": "Type error",
     "type-info": "Informação do tipo",
     "type-notice": "Tipo aviso",
-    "type-success": "type-success",
+    "type-success": "Tipo correto",
     "type-warning": "Tipo de advertência",
     "unbalance": "Desequilíbrio",
     "unbalanced-entry": "Asiento descuadrado",
@@ -1613,7 +1613,7 @@
     "variants": "Variantes",
     "vat": "CUBA",
     "vat-document": "Documento de IVA",
-    "vat-exception": "Excepción de IVA",
+    "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
     "vat-number-not-vies": "O número '%vat-number%' não está registrado no sistema VIES",
     "vat-regime": "Regime de IVA",
@@ -1655,7 +1655,7 @@
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
-    "works": "Trabajos",
+    "works": "Trabalhos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "Operação sobre X",
